--- a/.github/workflows/stage-integration-test-slim.yml
+++ b/.github/workflows/stage-integration-test-slim.yml
@@ -20,6 +20,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      image_path: ${{ steps.set-image-path.outputs.image_path }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up Docker Buildx
@@ -45,12 +47,17 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+#HACKHACKHACK: The image path in the next step cannot be dynamically fetched due to context visibility (env not visible)
+# We therefore use the output parameters which can be referenced via needs
+      - id: set-image-path
+        name: Set image path to output
+        run: echo "::set-output name=image_path::${{ env.PATHFORTEST }}"
 
   integration-test-for-pr:
     needs: build-temporary-image
     runs-on: ubuntu-latest
     container:
-      image: ${{ env.PATHFORTEST }}
+      image: ${{ needs.build-temporary-image.outputs.image_path }}
       options: --user root
     env:
       BTPSA_PARAM_MYEMAIL: ${{ secrets.BTPSA_PARAM_MYEMAIL }}
